--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+backend/app/shreyas/tonsil_detector.h5 filter=lfs diff=lfs merge=lfs -text
 backend/app/depressiLess/models/depression_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
