--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,10 +37,11 @@
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.23.3",
-		"@testing-library/jest-dom": "^6.1.5",
-		"@testing-library/react": "^14.1.2",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.3.1",
 		"@types/jest": "^29.5.11",
 		"@types/react-test-renderer": "^18.0.7",
+		"axios-mock-adapter": "^1.22.0",
 		"cypress": "^11.2.0",
 		"cypress-layout-inspector": "^1.7.0",
 		"eslint": "^8.55.0",
